# cloudvision-mcp

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  cloudvision_mcp.py  pyproject.toml
.github/workflows/: ci.yml
cvp_mcp/: env.py  errors.py  rate_limit.py  tool_access.py  transport_security_config.py
cvp_mcp/grpc/: __init__.py  bugs.py  capability.py  config.py  config_async_flow.py  config_connector.py  connector.py  device_capabilities.py  device_resolve.py  endpoint.py  envelope.py  events.py  flow.py  hostname_resolve.py  interfaces.py  inventory.py  lifecycle.py  lldp.py  models.py  monitor.py  network_map.py  overlay.py  routing.py  sysdb_parse.py  uri_allowlist.py  uri_fetch.py  utils.py
deploy/: Containerfile  README.md  TLS.md  caddyfile.example  cloudvision-mcp-app.container.example  cloudvision-mcp-caddy.container.example  cloudvision-mcp.pod.example  environment.example  install.sh  lib.sh  rotate-basic-auth.sh  uninstall.sh
scripts/: S99lldpd  inject-cursor-mcp-env.sh
tests/: test_config_async_flow.py  test_config_compliance_rest.py  test_config_connector.py  test_config_running_lines.py  test_device_capabilities.py  test_device_resolve.py  test_envelope_and_parse.py  test_events_helpers.py  test_flow.py  test_inventory.py  test_lab_device_filter.py  test_lldp_connection_reuse.py  test_lldp_parse.py  test_log_noise_filter.py  test_monitor.py  test_network_map.py  test_security_helpers.py  test_transport_security_config.py  test_uri_fetch.py
tests/fixtures/: lldp_flat_sample.json  lldp_l2discovery_sample.json
